processor now a fully fledged C++ class with its own cpp file

--- a/emu6502/emu6502.vcxproj
+++ b/emu6502/emu6502.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="processor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="processor.h" />
