--- a/emu6502/emu6502.vcxproj.filters
+++ b/emu6502/emu6502.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="processor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
