passed Klaus Dormann (Klaus2m5) tests except BRK

--- a/emu6502test/emu6502test.vcxproj
+++ b/emu6502test/emu6502test.vcxproj
@@ -175,6 +175,11 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\emu6502\emu6502.vcxproj">
+      <Project>{040de831-5376-4bbf-a0db-025240a0f57c}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
